# recipe

./: .coverage  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SKILLS.md  config.yaml  main.py  main_agent.py  main_api.py  main_mcp_http.py  main_mcp_sse.py  main_mcp_stdio.py  pyproject.toml  secrets.yaml.template
.github/: copilot-instructions.md
.github/workflows/: pr-quality.yml
adapters/input/: __init__.py
adapters/input/fastapi/: dependencies.py  ingredient_router.py  recipe_ingredient_router.py  recipe_router.py  recipe_ustensil_router.py  register.py  router.py  step_router.py  tool_router.py  ustensil_router.py
adapters/input/fastmcp/: dependencies.py  ingredient_tools.py  recipe_ingredient_tools.py  recipe_tools.py  recipe_ustensil_tools.py  register.py  step_tools.py  test.json  tool_tools.py  tools.py  ustensil_tools.py
adapters/input/schemas/: __init__.py  ingredient_schema.py  recipe_schema.py  source_schema.py  step_schema.py  tool_schema.py  ustensil_schema.py
adapters/output/duckdb/: ingredient_repository.py  recipe_repository.py  repository.py  step_repository.py  tool_repository.py  ustensil_repository.py
adapters/output/memory/: ingredient_repository.py  recipe_repository.py  repository.py  step_repository.py  tool_repository.py  ustensil_repository.py
adapters/output/mongodb/: ingredient_repository.py  recipe_repository.py  repository.py  step_repository.py  tool_repository.py  ustensil_repository.py
application/services/: __init__.py  ingredient_service.py  recipe_service.py  step_service.py  tool_service.py  ustensil_service.py
application/use_cases/: __init__.py  find_by_name.py  find_by_recipe.py  find_ingredient_by_name.py  link_ingredient_to_recipe.py  link_ustensil_to_recipe.py  unlink_ingredient_from_recipe.py  unlink_ustensil_from_recipe.py
config/: app.yaml  http.yaml  soft_delete.yaml
config/adapters/: adapters.yaml
config/adapters/input/: cache.yaml  fastapi.yaml  fastmcp.yaml  keycloak.yaml  license.yaml  probe.yaml  tenant.yaml
data/: ingredient.csv  recipe.csv  tool.csv  ustensil.csv
docs/: agent.md  decisions.md  docker.md  http-conventions.md  implementation.md  new-entity.md  quickstart.md
domain/models/: country.py  ingredient.py  meal_category.py  recipe.py  step.py  tool.py  ustensil.py
domain/ports/: __init__.py  recipe_repository.py  step_repository.py  tool_repository.py  ustensil_repository.py
infrastructure/: agent_config.py  container.py  ingredient_container.py  purge_registry.py  recipe_container.py  step_container.py  tool_container.py  ustensil_container.py
infrastructure/containers/: ingredient_container.py  recipe_container.py  step_container.py  ustensil_container.py
tests/units/: conftest.py
(+80 files in other folders)
