[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rekipe-sample"
version = "0.1.0"
description = "Sample CRUD — built on arclith"
requires-python = ">=3.13"
dependencies = [
    "arclith[mongodb,fastapi,mcp,duckdb]>=0.2.0",
    "pydantic-ai[openai]>=0.2.0",
    "chainlit>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = [
    "domain",
    "adapters",
    "application",
    "infrastructure",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]


