[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recipe"
version = "0.1.0"
description = "Sample CRUD — built on arclith"
requires-python = ">=3.13,<3.14"
dependencies = [
    "arclith[mongodb,fastapi,mcp,duckdb]>=0.8.1",
    "hvac>=2.3.0",
]


[tool.mypy]
explicit_package_bases = true

[tool.coverage.run]
source = ["domain", "adapters", "application", "infrastructure"]
branch = true
omit = [
    "main_*.py",
    "**/__init__.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "if __name__ == '__main__':",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = [
    "domain",
    "adapters",
    "application",
    "infrastructure",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.6",
    "bandit[toml]==1.9.4",
    "radon==6.0.1",
    "mypy==1.19.1",
]
